Fixing and align text

--- a/CSS/external_Deyse.css
+++ b/CSS/external_Deyse.css
@@ -58,7 +58,14 @@ section, summary, time, mark, audio, video {
 
 	h1, h2, h3, h4, h5, h6 {
 		font-weight: 400;
-		color: #483949;
+		color: #392525;
+		line-height: 1.25em;
+    
+	}
+
+	 h3 {
+		font-weight: 400;
+		color: #e0d1d4;
 		line-height: 1.25em;
     
 	}
